Bug 49554 - JDK 1.5 and Ant Editor troubles